I.IaaS/3.Orchestration/1.Kubernetes/C.Cluster/1.Public/0.GCP/resources-echo-web-v2/manifests/echoweb-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: echoweb-ip
  labels:
    app: echo
spec:
  backend:
    serviceName: echoweb-backend
    servicePort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: echoweb-backend
  labels:
    app: echo
spec:
  type: NodePort
  selector:
    app: echo
    tier: web
  ports:
  - port: 8000
    targetPort: 8000
